--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "scripts": {
     "dev": "serverless offline start --noTimeout",
     "docker": "serverless offline start --host 0.0.0.0 --stage docker",
-    "start": "node producer.js",
     "code-style": "xo",
     "deploy": "serverless deploy"
   },
   "dependencies": {
-    "loggy-log": "^1.1.4",
+    "kafka-node": "4.0.2",
     "mongoose": "^5.7.0",
-    "post-json-to-kafka": "^1.0.0",
+    "@tcf_team/send-json-to-kafka-queue": "1.0.5-beta1",
     "ramda": "^0.26.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "serverless-offline": "^5.12.0",
-    "serverless-provider-handler": "^1.0.3"
+    "serverless-provider-handler": "^1.0.3",
+    "winston": "3.2.1",
+    "config": "3.3.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
